<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Event" Id="{ca8b0247-8ca1-4b22-88d3-1e68121912c6}">
    <Declaration><![CDATA[TYPE ST_Event :
STRUCT
	eEventType: STRING(255); 
	eEventSeverity: STRING(255);
	nEventIdentity: UDINT;
	sEventName: STRING(255);
	sEventText: STRING(255);
	dtTimestamp: DATE_AND_TIME;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>